--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,43 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
   /* height: 100%; */
-  background-color: rgb(134, 134, 153);
+  background-color: #323a3a;
+  color: aliceblue;
 }
 
 body {
-  color: black;
-  font-family: "Roboto", sans-serif;
+  /* color: black; */
+  font-family: "Roboto", "sans-serif", "Arial";
 }
+
+/* body input:focus {
+  outline: 2px solid red;
+  outline-offset: 2px;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width)
+    var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width))
+    var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-border-opacity: 1;
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
+}
+
+::selection {
+  outline: 2px solid red;
+  outline-offset: 2px;
+}
+
+body input:focus {
+  outline: 2px solid red;
+  outline-offset: 2px;
+}
+
+input:focus {
+  outline: 2px solid red;
+  outline-offset: 2px;
+} */
